# netbox-vpnaas-plugin

./: Readme.md  pyproject.toml  setup.py
netbox_docker_plugin/: __init__.py
netbox_vpnaas/: admin.py  config.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_vpnaas/api/: serializers.py  urls.py  views.py
netbox_vpnaas/migrations/: 0001_initial.py
