[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-vpnaas-plugin"
version = "0.0.1"
authors = [
  { name="Andrej Hyben", email="andrej@hyben.net" }
]
description = "Manage VPNaaS with Netbox & style."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["netbox", "netbox-plugin", "vpnaas"]

[project.urls]
"Homepage" = "https://github.com/ThaseG/netbox-vpnaas-plugin"
"Bug Tracker" = "https://github.com/ThaseG/netbox-vpnaas-plugin/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_vpnaas_plugin*"]
